Fixed card image size on mobile

--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -41,8 +41,7 @@
 
 .card__image {
   justify-self: end;
-  height: 66%;
-  width: auto;
+  align-self: end;
   margin-top: 1.6em;
 }
 
